--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -25,4 +25,17 @@
   html {
     @apply scroll-smooth;
   }
+
+  p {
+    @apply text-sm font-serif font-light;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE dan Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
